--- a/DynamicTranslationLoader/translation/translation.txt
+++ b/DynamicTranslationLoader/translation/translation.txt
@@ -25,7 +25,7 @@
 電波=Weirdo
 ミステリアス=Mysterious
 後輩キャラ=Underclassman
-高飛車=Mistress
+高飛車=Haughty
 お嬢様=Aristocrat
 セクシー=Sexy
 カラー①=Color ①
@@ -33,7 +33,7 @@
 親=Parent
 左右の親を入れ替え=Swap Sides
 種類=Type
-学生服（校内）=School uniform (Indoors)
+学生服（校内）=School Uniform (Inside School)
 Option A=Option A
 コピー=Copy
 陰毛の色を眉の色に合わせる=Copy eyebrow color over to pubic hair
@@ -46,7 +46,7 @@ Option A=Option A
 ボトムス=Bottoms
 服の柄③=Cloth Pattern ③
 後ろ髪の種類=Back Hair Type
-ショート=Underwear
+ショート=Short
 アニメ=Anime
 表示する靴のタイプ=Displayed Shoe Type
 首=Neck
@@ -99,7 +99,7 @@ Option A=Option A
 タイプ２=Type 2
 ペイント０２回転=Paint 02 Rotation
 勉強する？=Likes to study?
-YES=YES
+YES=Yes
 NO=No
 尻のサイズ=Ass Size
 眉のパターン=Eyebrow Pattern
@@ -290,7 +290,7 @@ XYZの文字を左右ドラッグでも調整できます=You can also adjust XY
 顎先の前後=Chin Depth
 目頭の左右位置=Inner Eye Corner Height
 眉の色を髪の色に合わせる=Copy Eyebrow Color To Hair
-服読込み=Load Clothes
+服読込み=Load Clothing
 エクステ=Extension
 下まぶたの形状２=Lower Eyelid Shape 2
 決定=Apply
@@ -313,7 +313,7 @@ O=O
 日焼け跡の色=Tan Color
 フェイスペイント０２の種類=Face Paint 02 Type
 胴体下の奥=Lower Torso Thickness
-靴(内履き)=Shoes (Indoors
+靴(内履き)=Shoes (Indoors)
 全体=General
 顔の上部前後=Upper Face Depth
 顔の上部サイズ=Upper Face Size
@@ -403,7 +403,7 @@ O=O
 西=West
 足首の幅=Ankle Width
 名前=Name
-上履き=Shoes
+上履き=Indoor Shoes
 肉感の強さ=Skin Impression Strength
 ペイント０１大きさ=Paint 01 Size
 タイプ２１=Type 21
@@ -522,7 +522,7 @@ Y=Y
 001 / 006=001/006
 背面フレームを表示=Back Frame
 日付=Date
-※ 読込みたい情報にチェックを入れてください=※ Please check the information you want to read
+※ 読込みたい情報にチェックを入れてください=※ Select the information you want to load
 顔=Face
 髪=Hair
 キャラ情報=Character Information
@@ -560,7 +560,7 @@ AB=AB
 キャンセル=Cancel
 愛称を入力して下さい=Enter a nickname
 しない=No
-キャラ保存と削除=Saving and deleting characters
+キャラ保存と削除=Save/Delete Characters
 アウターの種類=Outer Type
 エクステの基本の色=Extension Base Color
 キャラ=Character
@@ -675,11 +675,10 @@ AB=AB
 外履きを初期の状態に戻す=Returning the outer wear to the initial state
 パーツB=Part B
 パーツC=Part C
-キャラ読込み=Character Loading
-服の保存と削除=Save or delete uniforms
+キャラ読込み=Load Character
+服の保存と削除=Save/Delete Clothing
 コンフィグ=Config
 影の表現=Shadow Type
-深いくっきり影=Deep Sharp Shadow
 影の濃さ=Shadow Density
 アウトラインの濃さ=Outline Density
 アウトラインの幅=Outline Thickness
@@ -705,10 +704,8 @@ No Image=No Image
 変更せず保存=Save without changing
 保存をやめる=Cancel
 スペースキーで戻ります=Press Spacebar to return
-キャラメイクを終了しますか？=Exit Game?
-※ アクセサリの表示をまとめて切り替える時の
-　 グループ分けです。
-　 サブに設定するとH開始時に非表示になります。=※ The time when the accessories get shown can be changed with the buttons above. When set to sub, it will be hidden during H scenes.
+キャラメイクを終了しますか？=Exit Character Maker?
+サブに設定するとH開始時に非表示になります。=※ The time when the accessories get shown can be changed with the buttons above. When set to sub, it will be hidden during H scenes.
 スロット０9=Slot 09
 スロット０7=Slot 07
 スロット０2=Slot 02
@@ -719,10 +716,15 @@ No Image=No Image
 スロット０１=Slot 01
 スロット０4=Slot 04
 スロット０8=Slot 08
-※ 各項目の変形に関するものをまとめたものとなります。=※Aggregate Slider List
 カラー=Color
 親を選択=Select parent
 浅いなめらか影=Light Smooth Shadow
+浅いくっきり影=Light Sharp Shadow
+深いなめらか影=Dark Smooth Shadow
+深いくっきり影=Dark Sharp Shadow
+境界線のある影=Bordered Shadow
+完全なめらか影=Completely Smooth Shadow
+影なし=No Shadow
 ロングヘア=Long Hair
 ロングサイドテール(左)=Long Side Tail (L)
 ロングサイドテール(右)=Long Side Tail (R)
@@ -740,11 +742,11 @@ No Image=No Image
 三つ編み=Braided
 サイドアップ(右)=Side Up (R)
 サイドアップ(左)=Side Up (L)
-学生服（下校）=School uniform (Outdoors)
-体操着=Gym clothes
+学生服（下校）=School Uniform (Going Home)
+体操着=Gym Clothing
 水着=Swimsuit
-私服=Personal clothes
-お泊り=Staying over
+私服=Personal Clothing
+お泊り=Staying Over
 水泳部=Swimming Club
 漫研部=Manga club
 チアリーディング部=Cheerleading Club
@@ -879,3 +881,71 @@ No Image=No Image
 胴=Torso
 手=Hand
 股間周り=Groin
+Ver 2.0=
+サーバーをチェックしています=Checking Server
+サーバーをチェックしています．=Checking Server.
+サーバーをチェックしています．．=Checking Server..
+サーバーをチェックしています．．．=Checking Server...
+サーバーをチェックしています．．．．=Checking Server....
+サーバーをチェックしています．．．．．=Checking Server.....
+サーバーをチェックしています．．．．．．=Checking Server......
+サーバーをチェックしています．．．．．．．=Checking Server.......
+サーバーをチェックしています．．．．．．．．=Checking Server........
+サーバーをチェックしています．．．．．．．．．=Checking Server.........
+サーバーをチェックしています．．．．．．．．．．=Checking Server..........
+サーバーへのアクセスに失敗しました。=Failed To Connect
+プレイヤーを選択して下さい=Select A Player
+名前：=Name:
+誕生日：=Date Of Birth:
+血液型：=Blood Type:
+愛称：=Nickname:
+性格：=Personality:
+ダウンロード=Download
+タイトル=Title
+利用規約=Terms of service
+アップロードする=Upload
+既にアップ済みのキャラです。
+現在選択しているキャラに置き換えますか？=Character is already uploaded. Replace it?
+データを取得しています=Acquiring Data
+新垣 凛花=
+りんか=
+8月18日=
+Ｏ型=
+本当にアップロードしますか？=Confirm Upload
+そのデータは既にアップされています。=Data already uploaded
+人気順に並べる=Most Popular
+新しい順に並べる=Most Recent
+古い順に並べる=Oldest
+総合=All Time
+週間=This Week
+低い=Short
+普通=Normal
+高い=Tall
+小さい=Small
+大きい=Big
+セミロング=Medium
+ロング=Long
+ツイン=Twin
+アップロード=Upload
+ダウンロードする=Download
+キャッシュを有効にする=Enable Caching
+(一度見たキャラ画像の表示が早くなります)=(Previously loaded cards load faster)
+※１~４GBのハードディスクの空き容量が必要です=※ 1~4GB of available hard disk space is required
+キャッシュを削除=Delete Cache
+本当にアップロードしますか?=Confirm Upload
+純真無垢=Pure
+そのデータは既にアップされています。=Character is already uploaded.
+既にアップ済みのキャラです。\r\n現在選択しているキャラに置き換えますか？=Character is already uploaded.\r\n Replace it?
+ネットワークの接続に失敗しました=Network Connection Failed
+キャラデータを変更しました=Character Data Updated
+キャラデータをアップロードしました=Character Data Uploaded
+唇=Lips
+姓=Surname
+慎重=Wary
+積極的=Assertive
+マイペース=Independent
+勤勉=Diligent
+クール=Cool
+優しい=Kind
+※ 学生証画像及びカード画像を撮影
+　 しないと保存できません。=※ Make a Student ID and Card photo or you can't save.
